# PoreSpy

./: .gitignore  README.md  conda-environment.yml  example.py  hatch_build.py  meson.build  pyproject.toml
.github/: dependabot.yml
.github/workflows/: bump-version-dev.yml  bump-version-release.yml  bump-version.yml  examples.yml  generate-docs.yml  generate-release-notes.yml  gh-pages.yml  logger.sh  nightly-dev.yml  nightly-pypi.yml  nightly.yml  publish-to-pypi.yml  publish-to-testpypi.yml  pypi.yml  release-notes.yml  ruff.yml  run-examples.yml  run-tests.yml  test-duration-logger.yml  test-release.yml  tests.yml  utils.sh
docs/: Makefile  conf.py  index.rst  installation.rst
docs/_examples/simulations/: reference.rst
docs/_static/css/: custom.css
docs/_templates/autoapi/: index.rst
docs/modules/: index.rst
examples/filters/reference/: apply_chords.ipynb  apply_chords_3D.ipynb  apply_padded.ipynb  chunked_func.ipynb  distance_transform_lin.ipynb  fftmorphology.ipynb  fill_blind_pores.ipynb  fill_closed_pores.ipynb  find_disconnected_voxels.ipynb  find_dt_artifacts.ipynb  find_peaks.ipynb  find_trapped_clusters.ipynb  find_trapped_regions.ipynb  flood.ipynb  flood_func.ipynb  hold_peaks.ipynb  local_thickness.ipynb  nl_means_layered.ipynb  nphase_border.ipynb  pc_to_satn.ipynb  porosimetry.ipynb  prune_branches.ipynb  reduce_peaks.ipynb  region_size.ipynb  satn_to_seq.ipynb  seq_to_satn.ipynb  size_to_satn.ipynb  size_to_seq.ipynb  snow_partitioning.ipynb  snow_partitioning_n.ipynb  snow_partitioning_parallel.ipynb  trim_disconnected_blobs.ipynb  trim_disconnected_voxels.ipynb  trim_extrema.ipynb  trim_floating_solid.ipynb  trim_nearby_peaks.ipynb  trim_nonpercolating_paths.ipynb  trim_saddle_points.ipynb  trim_small_clusters.ipynb
examples/filters/tutorials/: adding_chords.ipynb  (+4 more)
examples/general/: denoising_and_segmenting_images.ipynb  getting_started.ipynb  loading_images.ipynb
src/porespy/: __init__.py  __version__.py
src/porespy/beta/: __init__.py  _fiber_gen.py  _gyroids.py  _lt_method.py  _lt_methods.py  _poly_cylinders.py  _tortuosity_bt_funcs.py  _vor_to_image.py  _walker.py  libwalker.dylib  meson.build
src/porespy_c/: meson.build
src/porespy_c/walker/: walker2d.c  walker3d.c
test/fixtures/: .test_durations_examples  .test_durations_unit
test/integration/: test_drainage.py  test_drainage_from_top.py  test_ibip_example_script.py  test_imbibition.py  test_inverse_Bo_study.py  test_pc_curves_with_drainage.py  test_pc_curves_with_imbibition.py  test_variable_Bo_study.py
test/unit/: test_beta.py  test_displacement_refs.py  test_dns.py  test_filters.py  test_filters_parallel.py  test_filters_size_seq_satn.py  test_generators.py  test_io.py  test_magnet.py  test_metrics.py  test_network_extraction.py  test_network_size_factor.py  test_parallel_filters.py  test_simulations.py  test_simulations_block_and_tackle.py  test_simulations_displacement_refs.py  test_simulations_ibip.py  test_simulations_ibop.py  test_simulations_qbip.py  test_snow2.py  test_tools.py  test_visualization.py
(+151 files in other folders)
